# FractionalProblem

./: CMakeLists.txt  README.md  VP.cc
includes/: Curve.h  DifferentialOperator.h  DiscreteFunctional.h  DiscreteSpace.h  DiscreteSpaceMatrixMgr.h  DiscreteSpaceMesh.h  Element.h  EmpiricalInterpolation.h  FractionalDerivative.h  GeometricVector.h  Green.h  GreenH.h  GreenL.h  GreenLog.h  GreenQP.h  Halton.h  Identity.h  IntegralOperator.h  L2Operator.h  Mesh.h  Msg.h  MultiLevelIntegralOperator.h  MyTypes.h  OneDimensionalIntegration.h  Operator.h  PECGrating.h  PECGratingReduced.h  PECGratingReducedML.h  ParametricProblem.h  ParametrizedFunction.h  Point.h  RegularP0.h  RegularP0Mesh.h  RegularP1Mesh.h  RiemannLiouville.h  RiemannLiouvilleProblem.h  ScalarValuedFunction.h  Sobol.h  SobolevSlobodeckii.h  TwoDimensionalIntegration.h  (+4 more)
src/: Msg.cc  Msg.h  MyTypes.cc  MyTypes.h  SingletonTemplate.h~  Utilities.cc  Utilities.h  discreteMeshTest.h~
src/Discrete/: #Base.h#  DiscreteFunctional.h  DiscreteFunctional.h~  DiscreteSpace.cc  DiscreteSpace.h  DiscreteSpaceMatrixMgr.cc  DiscreteSpaceMatrixMgr.cc~  DiscreteSpaceMatrixMgr.h  DiscreteSpaceMesh.cc  DiscreteSpaceMesh.cc~  DiscreteSpaceMesh.h  Element.h  Element.h~  Mesh.cc  Mesh.cc~  Mesh.h  Mesh.h~  RegularP0.cc  RegularP0.h  RegularP0Mesh.cc  RegularP0Mesh.cc~  RegularP0Mesh.h  RegularP0Mesh.h~  RegularP1Mesh.cc  RegularP1Mesh.cc~  RegularP1Mesh.h
src/EmpiricalInterpolation/: EmpiricalInterpolation.cc  EmpiricalInterpolation.h  randomized_svd.h  randomized_svd.h~
src/Functions/: ParametrizedFunction.cc  ParametrizedFunction.h  ScalarValuedFunction.cc  ScalarValuedFunction.h  ScalarValuedFunction.h~
src/Geometry/: Curve.cc  Curve.h  GeometricVector.cc  GeometricVector.h  Point.cc  Point.h
src/GreenFunc/: Green.cc  Green.h  GreenH.cc  GreenH.h  GreenL.cc  (+5 more)
test/: CMakeLists.txt  discreteMeshTest.h  discreteMeshTest.h~  discreteTest.h  empiricalInterpolationTest.h  geomTest.h  greenTest.h  integrationTest.h  meshTest.h  meshTest.h~  multiLevelTest.h~  newEr.py  quasiMonteCarloTest.h  riemannLiouvilleTest.h  riemannLiouvilleTest.h~  scalarFunctionTest.h  scalarFunctionTest.h~  test.cc  utilsTest.h
(+55 files in other folders)
